# 188final

./: README.md  pyproject.toml
.github/workflows/: build-and-deploy.yaml
final_project/: Dockerfile  docker-compose.yaml  main.py  pyproject.toml  test_main.py
final_project/templates/: course-list.html  create-course.html  index.html  message.html
k8s/: template-map.yaml  web.yaml
