[tool.poetry]
name = "final-project"
version = "0.1.0"
description = ""
authors = ["Lanting Chiang <lantingchiang@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flake8 = "^4.0.1"
isort = "^5.10.1"
black = "^21.12b0"
fastapi = "^0.61.0"
uvicorn = "^0.11.8"
Jinja2 = "^3.0.3"
python-multipart = "^0.0.5"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
requests = "^2.25.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
